# horizon-ui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default_settings.yaml  gesture_mappings.yaml  voice_commands.yaml
config/profiles/: low_vision.yaml  sterile.yaml  voice_only.yaml
docs/: architecture.md
metrics_output/: metrics_results.json  voice_metrics_results.json
models/: README.md
scripts/: benchmark.py  collect_gesture_data.py  demo.py  generate_metrics.py  generate_visualizations.py  generate_voice_metrics.py  test_backend.py
src/horizon/: __init__.py  __main__.py  app.py  constants.py  event_bus.py  types.py
src/horizon/capture/: __init__.py  audio_capture.py  device_manager.py  frame_capture.py
tests/: conftest.py
tests/integration/: test_fusion_pipeline.py  test_gesture_pipeline.py  test_plugin_system.py  test_voice_pipeline.py
tests/performance/: test_latency.py  test_resource_usage.py
tests/unit/: test_action_mapper.py  test_asr.py  test_audio_capture.py  test_context_manager.py  test_coordinate_mapper.py  test_feature_extractor.py  test_frame_capture.py  test_fusion_engine.py  test_gesture_classifier.py  test_hand_detector.py  test_intent_parser.py  test_ipc_server.py  test_landmark_estimator.py  test_os_event_injector.py  test_plugin_manager.py  test_policy_engine.py  test_profile_manager.py  test_settings_store.py  test_smoothing.py  test_vad.py
training/: README.md  augment_data.py  evaluate_model.py  export_onnx.py  requirements.txt  train_gesture_model.py
training/dataset/: README.md
(+37 files in other folders)
