[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "horizon-ui"
version = "0.1.0"
description = "Multimodal desktop overlay for touchless control via gesture and voice"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Horizon UI Team" }]
readme = "README.md"

dependencies = [
    "opencv-python>=4.8",
    "mediapipe>=0.10",
    "onnxruntime>=1.16",
    "numpy>=1.24",
    "PyQt6>=6.5",
    "sounddevice>=0.4",
    "webrtcvad-wheels>=2.0.10",
    "faster-whisper>=0.10",
    "vosk>=0.3.45",
    "pyyaml>=6.0",
    "pywin32>=306",
    "pynput>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-qt>=4.2",
    "pytest-mock>=3.11",
    "ruff>=0.1",
    "mypy>=1.6",
]
training = [
    "torch>=2.1",
    "torchvision>=0.16",
    "matplotlib>=3.8",
    "scikit-learn>=1.3",
]

[project.scripts]
horizon = "horizon.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/horizon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
